<resources>
    <string name="app_name">Facult Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Авторизируйтесь</string>
    <string name="nav_header_subtitle">чтобы получить информацию</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_github_login">Github Oauth</string>
    <string name="nav_github_logout">Github logout</string>
    <string name="nav_github_repos">Github repos</string>
    <string name="nav_maps">Map</string>
    <string name="nav_contacts">Contacts</string>
    <string name="nav_device_info">Device info</string>
    <string name="nav_sensors">Sensors</string>
    <string name="github_place">Github</string>


    <string name="domain_name">Name.com</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="github_image">github_image</string>
    <string name="username">username</string>


    <!-- sensors and device info-->
    <string name="about_device">DEVICE INFO</string>
    <string name="wifiIP">WI-FI ip: </string>
    <string name="mobileIP">Mobile ip: </string>
    <string name="device_model">Device model: </string>
    <string name="android_version">Android version: </string>
    <string name="accelerometer">Value: </string>

    <string name="screenshot">screenshot</string>
    <string name="sensors_label">Показания датчиков</string>


    <!-- maps -->
    <string name="not_found_error_message">Not found</string>
    <string name="remote_error_message">remote_error_message</string>
    <string name="unknown_error_message">unknown_error_message</string>
    <string name="network_error_message">network_error_message</string>
    <string name="take_photo">Сделать скрин</string>
    <string name="save_photo">Сохранить</string>
    <string name="token">token</string>
    <string name="prefs_name">prefs_name</string>
    <string name="phone_number">Phone number -</string>
    <string name="name">Name -</string>
    <string name="repositories">Repositories</string>
    <string name="contacts">Contacts</string>
    <string name="Account">Владелец аккаунта  </string>
    <string name="Token">Токен:  </string>
    <string name="no_user_info">Нет данных о пользователе и токене</string>
    <string name="skip_oauth">Пропустить</string>


    <!-- for other -->


</resources>
