<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_github_repos"
            android:icon="@drawable/ic_github_repos_black_24dp"
            android:title="@string/nav_github_repos"/>
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/nav_maps"/>
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contacts_black_24dp"
            android:title="@string/nav_contacts"/>
        <item
            android:id="@+id/nav_device_info"
            android:icon="@drawable/ic_perm_device_information_black_24dp"
            android:title="@string/nav_device_info"/>
        <item
            android:id="@+id/nav_sensors"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/nav_sensors"/>

    </group>

    <item android:title="@string/github_place">
        <menu>
            <item
                android:id="@+id/nav_github_logout"
                android:icon="@drawable/ic_logout_github_black_24dp"
                android:title="@string/nav_github_logout"/>
        </menu>
    </item>

</menu>
