<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SensorsFragment"
    tools:layout_editor_absoluteY="81dp">


    <TextView
        android:id="@+id/sensors_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/sensors_label"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvAccelerometerTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.296" />

    <TextView
        android:id="@+id/tvAccelerometerTV"
        android:layout_width="86dp"
        android:layout_height="27dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/accelerometer"
        android:textColor="@color/Blue"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnTakePhoto"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="Сделать фото и сохранить"

        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAccelerometerTV"
        app:layout_constraintVertical_bias="0.958" />

    <ImageView
        android:id="@+id/imgViewScreen"
        android:layout_width="270dp"
        android:layout_height="340dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="72dp"
        android:contentDescription="@string/screenshot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAccelerometerTV"
        app:layout_constraintVertical_bias="0.625" />


</android.support.constraint.ConstraintLayout>